mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongodb
          image: mongo:5.0
          ports:
            - containerPort: 27017
---

# This guy forwards requests to pod defined above
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    # The .select.matchLabels of the pod (see above)
    app: mongo
  ports:
    - protocol: TCP
      # The port at which this service will be accessed
      # port: 8080
      port: 27017 # Usually set to same port as container
      # The port on which the pod is running (see container port above)
      targetPort: 27017
